-*- mode: org -*-

* 1.3.0
** New commands:
*** latex-table-wizard-kill-row-content
*** latex-table-wizard-kill-column-content
*** latex-table-wizard-delete-row
*** latex-table-wizard-delete-column
** Commands changed:
*** latex-table-wizard-kill-column
aliased to new command "latex-table-wizard-kill-column-content"
*** latex-table-wizard-kill-row
aliased to new command "latex-table-wizard-kill-row-content"


* 1.2.0 <2022-12-20 Tue>
** New user option: latex-table-wizard-allow-detached-args
Same as texmathp-allow-detached-args and
reftex-allow-detached-macro-args, but for the purposes of parsing the
table (especially determining where the table content starts).  By
default, nil.
** New user option: latex-table-wizard-warn-about-detached-args
If t (default value) and latex-table-wizard-allow-detached-args is
nil, the user is warned about suspect cases of detachment of a macro
and its arguments when the table is parsed.
* 1.1.0 <2022-12-18 Sun>
** Four interactive commands added

+ latex-table-wizard-align-left
+ latex-table-wizard-align-right
+ latex-table-wizard-center
+ latex-table-wizard-compress

Each of these commands performs one of the transformations that
latex-table-wizard-align cycles through.  Unlike this command, these
new ones are not exposed through the transient interface.